<resources>
    <string name="app_name">Gasto da Viagem</string>
    <string name="dist_ncia">Distância</string>
    <string name="Preço" >Preço</string>
    <string name="Autonomia" >Autonomia</string>
    <string name="total_de_quil_metros">Total de quilômetros</string>
    <string name="pre_o_por_litro">Preço por litro</string>
    <string name="kms_por_litro">KMs por Litro</string>
    <string name="seu_gasto_total_ser_de">SEU GASTO TOTAL SERÁ DE :</string>
    <string name="calcular">Calcular</string>
    <string name="teste">Teste</string>
    <string name="dist_ncia2">Distância</string>
    <string name="autonomia">Autonomia</string>
    <string name="pre_o">Preço</string>
    <string name="r">R$</string>
</resources>